--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,20 @@ code {
 
 .wrapper {
   padding-top: 5rem;
-  margin: 0;
+  margin: 0 auto;
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+h1 {
+  text-align: center;
+}
+
+.rm {
+  background: red;
+  border-radius: 50%;
+  color: #fff;
+  border: none;
 }
