--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('background.jpg');
 }
 
 code {
@@ -23,13 +24,6 @@ code {
 
 h1 {
   text-align: center;
-}
-
-.rm {
-  background: red;
-  border-radius: 50%;
-  color: #fff;
-  border: none;
 }
 
 .done {
